Added Max98373 menuconfig and dts Added Max98390 amplifier integration for Rpi

--- a/arch/arm/boot/dts/overlays/Makefile
+++ b/arch/arm/boot/dts/overlays/Makefile
@@ -26,6 +26,8 @@ dtbo-$(CONFIG_ARCH_BCM2835) += \
 	audioinjector-ultra.dtbo \
 	audioinjector-wm8731-audio.dtbo \
 	audioinjector-max98396-audio.dtbo \
+	audioinjector-max98390-audio.dtbo \
+	audioinjector-max98373-audio.dtbo \
 	audiosense-pi.dtbo \
 	audremap.dtbo \
 	balena-fin.dtbo \
