--- a/arch/arm/configs/bcm2709_defconfig
+++ b/arch/arm/configs/bcm2709_defconfig
@@ -988,6 +988,8 @@ CONFIG_SND_AUDIOINJECTOR_PI_SOUNDCARD=m
 CONFIG_SND_AUDIOINJECTOR_OCTO_SOUNDCARD=m
 CONFIG_SND_AUDIOINJECTOR_ISOLATED_SOUNDCARD=m
 CONFIG_SND_AUDIOINJECTOR_MAXIM_SOUNDCARD=m
+CONFIG_SND_AUDIOINJECTOR_MAX98390_SOUNDCARD=m
+CONFIG_SND_AUDIOINJECTOR_MAX98373_SOUNDCARD=m
 CONFIG_SND_AUDIOSENSE_PI=m
 CONFIG_SND_DIGIDAC1_SOUNDCARD=m
 CONFIG_SND_BCM2708_SOC_DIONAUDIO_LOCO=m
@@ -1009,6 +1011,8 @@ CONFIG_SND_SOC_ICS43432=m
 CONFIG_SND_SOC_MA120X0P=m
 CONFIG_SND_SOC_MAX98357A=m
 CONFIG_SND_SOC_MAX98396=m
+CONFIG_SND_SOC_MAX98390=m
+CONFIG_SND_SOC_MAX98373=m
 CONFIG_SND_SOC_SPDIF=m
 CONFIG_SND_SOC_WM8804_I2C=m
 CONFIG_SND_SIMPLE_CARD=m
