--- a/sound/soc/bcm/Makefile
+++ b/sound/soc/bcm/Makefile
@@ -28,6 +28,8 @@ snd-soc-iqaudio-dac-objs := iqaudio-dac.o
 snd-soc-audioinjector-pi-soundcard-objs := audioinjector-pi-soundcard.o
 snd-soc-audioinjector-octo-soundcard-objs := audioinjector-octo-soundcard.o
 snd-soc-audioinjector-maxim-soundcard-objs := audioinjector-maxim-soundcard.o
+snd-soc-audioinjector-max98390-soundcard-objs := audioinjector-max98390-soundcard.o
+snd-soc-audioinjector-max98373-soundcard-objs := audioinjector-max98373-soundcard.o
 snd-soc-audioinjector-isolated-soundcard-objs := audioinjector-isolated-soundcard.o
 snd-soc-audiosense-pi-objs := audiosense-pi.o
 snd-soc-digidac1-soundcard-objs := digidac1-soundcard.o
@@ -58,6 +60,8 @@ obj-$(CONFIG_SND_BCM2708_SOC_IQAUDIO_DAC) += snd-soc-iqaudio-dac.o
 obj-$(CONFIG_SND_AUDIOINJECTOR_PI_SOUNDCARD) += snd-soc-audioinjector-pi-soundcard.o
 obj-$(CONFIG_SND_AUDIOINJECTOR_OCTO_SOUNDCARD) += snd-soc-audioinjector-octo-soundcard.o
 obj-$(CONFIG_SND_AUDIOINJECTOR_MAXIM_SOUNDCARD) += snd-soc-audioinjector-maxim-soundcard.o
+obj-$(CONFIG_SND_AUDIOINJECTOR_MAX98390_SOUNDCARD) += snd-soc-audioinjector-max98390-soundcard.o
+obj-$(CONFIG_SND_AUDIOINJECTOR_MAX98373_SOUNDCARD) += snd-soc-audioinjector-max98373-soundcard.o
 obj-$(CONFIG_SND_AUDIOINJECTOR_ISOLATED_SOUNDCARD) += snd-soc-audioinjector-isolated-soundcard.o
 obj-$(CONFIG_SND_AUDIOSENSE_PI) += snd-soc-audiosense-pi.o
 obj-$(CONFIG_SND_DIGIDAC1_SOUNDCARD) += snd-soc-digidac1-soundcard.o
