--- a/sound/soc/codecs/Kconfig
+++ b/sound/soc/codecs/Kconfig
@@ -114,6 +114,7 @@ config SND_SOC_ALL_CODECS
 	select SND_SOC_MAX98925 if I2C
 	select SND_SOC_MAX98926 if I2C
 	select SND_SOC_MAX98927 if I2C
+	select SND_SOC_MAX98390 if I2C
 	select SND_SOC_MAX98373 if I2C
 	select SND_SOC_MAX98396 if I2C
 	select SND_SOC_MAX9850 if I2C
@@ -787,6 +788,10 @@ config SND_SOC_MAX98926
 
 config SND_SOC_MAX98927
 	tristate "Maxim Integrated MAX98927 Speaker Amplifier"
+	depends on I2C
+
+config SND_SOC_MAX98390
+	tristate "Maxim Integrated MAX98390 Speaker Amplifier"
 	depends on I2C
 
 config SND_SOC_MAX98373
